# shift-reduce-parser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-toolchain.cmake  main.cpp  neovim.json  wef
documentation/: grammars.md
include/: enums.h  i_feature.h  (+12 more)
parser/: CMakeLists.txt
parser/src/: calculator.cpp  calculator.h  function_store.h  main.cpp  varible_store.h
project/interpreters/naive_stack_interpreter/: CMakeLists.txt
project/interpreters/naive_stack_interpreter/include/: control_flow_graph.h  function_store.h  interpreter.h  json.h  naive_stack_interpreter.h  stack_machine.h  varible_store.h
project/interpreters/naive_stack_interpreter/repl/: CMakeLists.txt
project/interpreters/naive_stack_interpreter/repl/src/: main.cpp
project/interpreters/naive_stack_interpreter/src/: control_flow_graph.cpp  interpreter.cpp  naive_stack_interpreter.cpp  stack_machine.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/: CMakeLists.txt
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/arithmetic_expression/: arithmetic_test.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/complex_scenarios/: complex_scenarios_test.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/function_call/: function_call_test.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/if_statment/: if_statment_test.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/member_expression/: member_expression_test.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/varible_assignment/: varible_assignment_test.cpp
project/interpreters/naive_stack_interpreter/tests/unit_tests/src/while_statment/: while_statment_test.cpp
project/parser/tests/unit_tests/: CMakeLists.txt
project/parser/tests/unit_tests/src/: create_syntax_node_tree_test.cpp  main.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/negative/bin_expr_syntax_node/: bin_expr_syntax_node_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/arithmetic_expression/: arithmetic_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/array/: array_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/function_call/: function_call_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/function_statment/: function_statment_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/if_statment/: if_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/member_expression/: member_expression_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/object/: object_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/print_statment/: print_statment_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/return_statment/: return_statment_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/scope_statment/: scope_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/varible_assign_expression/: varible_assign_expression_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/arithmetic_expression/: addition_test.cpp  division_test.cpp  expression_in_circle_brackets_test.cpp  multiplication_test.cpp  subtraction_test.cpp  varible_expression_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/arrays/: arrays_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/if/: if_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/multylines/: multylines_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/numbers/: numbers_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/objects/: objects_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/strings/: strings_test.cpp
project/parser/tests/unit_tests/src/syntax_tree/function_call/: function_call_test.cpp
project/parser/tests/unit_tests/src/syntax_tree/function_statment/: function_statment_test.cpp
project/parser/tests/unit_tests/src/syntax_tree/if_statment/: if_test.cpp
project/parser/tests/unit_tests/src/syntax_tree/print_statment/: print_statment_test.cpp
project/parser/tests/unit_tests/src/syntax_tree/varible_assign_expression/: varible_assign_expression_test.cpp
project/parser/tests/unit_tests/utils/: utils.h
tests/unit_tests/: CMakeLists.txt  create_syntax_node_tree_test.cpp  dfs_pre_order_range_test.cpp  syntax_tree_test.cpp
tests/unit_tests/src/: create_syntax_node_tree_test.cpp  dfs_pre_order_range.cpp  dfs_pre_order_range_test.cpp  lexical_tokens_test.cpp  main.cpp  syntax_tree_test.cpp
tests/unit_tests/src/lexical_tokens/arithmetic_expression/: addition_test.cpp  division_test.cpp  expression_in_circle_brackets_test.cpp  multiplication_test.cpp  subtraction_test.cpp  varible_expression_test.cpp
tests/unit_tests/src/syntax_tree/: addition_test.cpp
tests/unit_tests/src/syntax_tree/arithmetic_expression/: addition_test.cpp  arithmetic_test.cpp  circle_brackets_test.cpp  diff_test.cpp  subtraction_test.cpp
tests/unit_tests/src/syntax_tree/conditional_expression/: conditional_expression_test.cpp
tests/unit_tests/src/syntax_tree/function_call/: function_call_test.cpp
tests/unit_tests/src/syntax_tree/function_statment/: function_statment_test.cpp
tests/unit_tests/src/syntax_tree/if_expression/: if_test.cpp
tests/unit_tests/src/syntax_tree/if_statment/: if_test.cpp
tests/unit_tests/src/syntax_tree/print_expression/: print_test.cpp
tests/unit_tests/src/syntax_tree/print_statment/: print_statment_test.cpp
tests/unit_tests/src/syntax_tree/return_statment/: return_statment_test.cpp
tests/unit_tests/src/syntax_tree/scope_expression/: scope_test.cpp
tests/unit_tests/src/syntax_tree/scope_statment/: scope_test.cpp
tests/unit_tests/src/syntax_tree/varible_assign_expression/: varible_assign_expression_test.cpp
tests/unit_tests/src/syntax_tree/while_statment/: while_test.cpp
tests/unit_tests/utils/: utils.h
(+394 files in other folders)
